    connection (e.g. lo is the only interface), then the HTTP server settings
    page is hidden.
 7. Only show actions on mouse-over.
 8. Use larger action icons in icon view when we have larger previews.
 9. Better non-monochrome radio-stream icons. Thanks to Grely
10. Dont use alternating rows in views (does not look too great with grouped
    view). Use a fading divider instead.
11. Remove lyrics and info pages, and place within a new context view.
12. Remove EchoNest usage, as this only seems to return English results. Use
    wikipedia instead. Only the introduction is displayed by default. If no
    entry is found on wikipedia, then last.fm is consulted.
13. Dont display stream URL as sub-text, it makes the view look messy for no
    real gain. (URL is still shown in tooltip)
14. Detailed tree view for foldes and playlists by default.
15. Remove config compatibility with Cantata versions older than 0.7
16. Only have 2 stop actions; stop now, or stop after current. Default stop
    action is always 'stop now'
17. Make 'stop after current track' assignable to KDE global shortcut.
18. Add 'stop after current' to tray item menu, and to Cantata MPRIS interface..
19. Try to use better text for buttons in dialogs, and not just yes/no.
20. Dont use icons in buttons when using QGtkStyle - Gtk does not use button
    icons.
21. Use checkboxes in sync dialog to mark songs to be copied.
22. Show number of selected artists, albums, and songs in sync dialog.
23. Save sync dialog size.
24. Show number of songs to be copied on action dialog. Make number a link,
    when clicked produce a dialog showing list.
25. Improve radiance CSS theme.
26. Use 24px playback icons if the icon theme has these.
27. When AudioCD is ejected, remove tracks from playqueue.
28. If Cantata is passed cdda:// then it will load, and start to play, the
    current AudioCD. Use cdda://?dev=$device (e.g. cdda://?dev=/dev/sr0) to
    specify which drive to use.